# swagger-output.json
@@ -10,6 +10,12 @@
   "schemes": [
     "http"
   ],
+  "consumes": [
+    "application/json"
+  ],
+  "produces": [
+    "application/json"
+  ],
   "paths": {
     "/": {
       "get": {
@@ -18,6 +24,83 @@
         "responses": {
           "200": {
             "description": "OK"
+          }
+        }
+      }
+    },
+    "/api/feed/": {
+      "get": {
+        "tags": [
+          "Feed"
+        ],
+        "summary": "개인 또는 전체피드 조회",
+        "description": "<p>개인피드 또는 전체피드를 조회합니다. <br />이스케이프 문자가 먹습니까?</p>",
+        "parameters": [
+          {
+            "name": "feedType",
+            "in": "query",
+            "type": "string"
+          },
+          {
+            "name": "userId",
+            "in": "query",
+            "type": "string"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "정상적인 값을 응답받았을 때, 아래 예제와 같은 형태로 응답받습니다.",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "feedList": {
+                  "type": "array",
+                  "items": {
+                    "type": "object",
+                    "properties": {
+                      "_id": {
+                        "type": "string",
+                        "example": "62504ef691595a092dee7eae"
+                      },
+                      "feedId": {
+                        "type": "string",
+                        "example": "1"
+                      },
+                      "content": {
+                        "type": "string",
+                        "example": "content1"
+                      },
+                      "image": {
+                        "type": "string",
+                        "example": "test image"
+                      }
+                    }
+                  }
+                }
+              },
+              "xml": {
+                "name": "main"
+              }
+            }
+          },
+          "400": {
+            "description": "비정상적인 값을 응답받았을 때, 아래 예제와 같은 형태로 응답받습니다.",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "result": {
+                  "type": "string",
+                  "example": "FAIL"
+                },
+                "message": {
+                  "type": "string",
+                  "example": "Server Error - 정의되지 않은 feedType."
+                }
+              },
+              "xml": {
+                "name": "main"
+              }
+            }
           }
         }
       }
